// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CToast renders correctly 1`] = `
<div
  appear=""
  aria-atomic="true"
  aria-live="assertive"
  class="c-toast"
  role="alert"
>
  <div
    class="c-toast-header"
  >
    <strong
      class="c-mr-auto"
    />
     
    <button
      aria-label="Close"
      class="c-ml-2 c-mb-1 c-close"
      type="button"
    >
      ×
    </button>
  </div>
   
  <div
    class="c-toast-body"
  />
</div>
`;

exports[`CToast renders correctly 2`] = `
<div
  appear=""
  aria-atomic="true"
  aria-live="assertive"
  class="c-toast"
  name="fade"
  role="alert"
  style="z-index: 1100; min-width: 350px; position: fixed; bottom: 0px; left: 50%; transform: translateX(-50%);"
>
  <div
    class="c-toast-header"
  >
    <strong
      class="c-mr-auto"
    >
      title
    </strong>
     
    <button
      aria-label="Close"
      class="c-ml-2 c-mb-1 c-close"
      type="button"
    >
      ×
    </button>
  </div>
   CToast body
</div>
`;
